--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,13 @@ android {
     compileSdkVersion 29
     buildToolsVersion '29.0.2'
 
+
+    repositories {
+        maven {
+            url "https://jitpack.io"
+        }
+    }
+
     defaultConfig {
         applicationId 'by.naxa.soundrecorder'
         minSdkVersion 16
@@ -37,6 +44,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.+'
     implementation 'com.googlecode.mp4parser:isoparser:1.1.22'
     implementation 'com.budiyev.android:circular-progress-bar:1.2.0'
+    implementation files('C:\\Users\\toklamca\\Desktop\\CUDA\\jave-1.0.2.jar')
 
     // detect memory leaks
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.1'
@@ -54,4 +62,6 @@ dependencies {
     // Firebase
     implementation 'com.google.firebase:firebase-analytics:17.2.1'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+    compile 'com.github.adrielcafe:AndroidAudioConverter:0.0.8'
+
 }
