--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-ersion: 2.1
+version: 2.1
 description: |
     Orb for working with Android projects on CircleCI. Source: https://github.com/circleci-public/android-orb
 display:
